[gd_scene load_steps=19 format=2]

[ext_resource path="res://gui/Interface.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/textures/player/wifisignalV2.png" type="Texture" id=3]
[ext_resource path="res://assets/textures/coffee.png" type="Texture" id=4]
[ext_resource path="res://assets/textures/enemies/chrome ansii.png" type="Texture" id=5]
[ext_resource path="res://assets/textures/enemies/radar-computer-sprite.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/ScreenMatrix.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://assets/textures/player/dron.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.309804, 0.282353, 0.282353, 0.717647 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.243137, 0.223529, 0.223529, 1 )
border_blend = true
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0.843137 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.576471, 0.878431, 0.211765, 1 )
border_blend = true
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="DynamicFont" id=3]
size = 38
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.0431373, 0.0392157, 0.0392157, 0.929412 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.109804, 0.827451, 0.0823529, 1 )
border_blend = true
corner_radius_top_left = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.462745, 0.113725, 0.113725, 0.952941 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.956863, 0.00784314, 0.00784314, 1 )
border_blend = true
corner_radius_top_left = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.235294, 0.227451, 0.227451, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.137255, 0.133333, 0.133333, 1 )

[sub_resource type="DynamicFont" id=10]
size = 34
use_filter = true
font_data = ExtResource( 7 )

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Wifi" type="Panel" parent="."]
visible = false
margin_left = 12.0
margin_top = 67.568
margin_right = 125.0
margin_bottom = 117.568
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="wifisignal" type="Sprite" parent="Wifi"]
position = Vector2( 29.1307, 22.3528 )
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 3 )
hframes = 4

[node name="Sprite" type="Sprite" parent="Wifi"]
position = Vector2( 77.9775, 26.4238 )
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 8 )

[node name="grayRect" type="Panel" parent="."]
margin_top = -1.05946
margin_right = 131.0
margin_bottom = 55.9405
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="heartsNumber" type="Label" parent="grayRect"]
margin_left = 44.0
margin_top = 16.0
margin_right = 156.0
margin_bottom = 62.0
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.027451, 0.0588235, 0.0117647, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="greenHeart" type="TextureRect" parent="grayRect"]
margin_left = 9.19839
margin_top = -3.14211
margin_right = 849.199
margin_bottom = 875.858
rect_scale = Vector2( 0.21, 0.21 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopBar" type="ColorRect" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -640.0
margin_right = 640.0
margin_bottom = 50.0
color = Color( 0.294118, 0.294118, 0.294118, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="connection" type="Label" parent="TopBar"]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -144.825
margin_top = 16.6489
margin_right = 40.1749
margin_bottom = 36.6489
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "connection"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisconnectedBar" type="ColorRect" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_bottom = 50.0
color = Color( 0.133333, 0.12549, 0.12549, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Disconnected" type="Label" parent="DisconnectedBar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -167.0
margin_top = -23.0
margin_right = 163.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blackRect" type="Panel" parent="."]
visible = false
margin_left = 1149.0
margin_top = 2.0
margin_right = 1280.0
margin_bottom = 59.0
custom_styles/panel = SubResource( 6 )

[node name="livesNumber" type="Label" parent="blackRect"]
margin_left = 61.689
margin_top = 9.55283
margin_right = 157.689
margin_bottom = 55.5528
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="chromHeart2" type="TextureRect" parent="blackRect"]
modulate = Color( 0.054902, 1, 0, 1 )
margin_left = 15.2051
margin_top = 1.77259
margin_right = 855.205
margin_bottom = 880.772
rect_scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="redRect" type="Panel" parent="."]
visible = false
margin_left = 1149.59
margin_top = -0.378414
margin_right = 1280.59
margin_bottom = 56.6216
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="livesNumber" type="Label" parent="redRect"]
margin_left = 61.689
margin_top = 9.55283
margin_right = 157.689
margin_bottom = 55.5528
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bossHeart" type="TextureRect" parent="redRect"]
margin_left = 5.0
margin_top = -7.0
margin_right = 845.0
margin_bottom = 728.0
rect_scale = Vector2( 0.07, 0.07 )
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="Node" parent="."]

[node name="BlackScreen" type="ColorRect" parent="Fade"]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="Tween" type="Tween" parent="Fade"]

[node name="RestartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -50.0
margin_right = 125.0
margin_bottom = 50.0
custom_styles/hover = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color = Color( 0.0352941, 0.756863, 0.0313726, 1 )
custom_colors/font_color_hover = Color( 0.384314, 0.952941, 0.145098, 1 )
text = "Restart"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -117.0
margin_top = -20.5
margin_right = 117.0
margin_bottom = 20.5
custom_fonts/font = SubResource( 5 )
text = "Game Over"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -121.29
margin_top = -49.4459
margin_right = 128.71
margin_bottom = 50.5536
custom_fonts/font = SubResource( 10 )
text = "YOU WIN"
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="DisconnectedTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="WinButton" to="." method="_on_WinButton_pressed"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]
[connection signal="timeout" from="DisconnectedTimer" to="." method="_on_DisconnectedTimer_timeout"]
